--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,4 @@
 $background: #141C31;
-$alt-background: #5F8BA9;
 $white: #E5EBF1;
 $red: #AA0A11;
 $cyan: #21D6CB;
@@ -30,7 +29,7 @@ body {
 .navbar {
     width: 100%;
     height: 40px;
-    background-color: $alt-background;
+    background-color: $red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,7 +41,7 @@ body {
         padding: 10px;
         font-size: 20px;
         &:hover{
-            color: $red;
+            color: $cyan;
         }
     }
     form {
@@ -113,6 +112,55 @@ body {
         .description {
             margin-top: 15px;
             margin-bottom: 15px;
+        }
+    }
+}
+
+.account {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    form {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        padding: 20px;
+        border: 1px solid $white;
+        background-color: $red;
+        input {
+            margin-bottom: 10px;
+        }
+    }
+    a {
+        margin-top: 10px;
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+            color: $cyan;
+        }
+    }
+}
+
+.profile {
+    position: absolute;
+    margin-left: 90%;
+    width: 10%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    img {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 5px;
+    }
+    a {
+        text-decoration: none;
+        color: $red;
+        &:hover {
+            color: $cyan;
         }
     }
 }
