--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -164,3 +164,30 @@ body {
         }
     }
 }
+
+.postmaker {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    label {
+        margin: 15px 0 15px 0;
+    }
+    select {
+        width: min-content;
+    }
+    textarea {
+        resize: none;
+        width: 100%;
+        height: 50%;
+    }
+    input {
+        &#author {
+            width: min-content;
+        }
+        &[type=submit] {
+            margin-top: 10px;
+            width: min-content;
+        }
+    }
+}
