--- a/public/css/app.css
+++ b/public/css/app.css
@@ -212,3 +212,14 @@ body {
   width: -moz-min-content;
   width: min-content;
 }
+
+.errors {
+  padding: 0px;
+  list-style-type: none;
+}
+.errors .error {
+  list-style: none;
+  margin: 5px;
+  padding: 5px;
+  background-color: #AA0A11;
+}
