--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -216,3 +216,14 @@ body {
         }
     }
 }
+
+.errors {
+    padding: 0px;
+    list-style-type: none;
+    .error {
+        list-style: none;
+        margin: 5px;
+        padding: 5px;
+        background-color: $red;
+    }
+}
