--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -119,7 +119,8 @@ body {
     }
 }
 
-.post {
+.post, .post-extended {
+    position: relative;
     margin: 2%;
     padding: 10px;
     border: 1px solid $white;
@@ -131,11 +132,13 @@ body {
         background-color: $red;
         width: 60px;
         margin-top: 10px;
+        margin-bottom: 15px;
         text-align: center;
     }
-    .description {
-        margin-top: 15px;
-        margin-bottom: 15px;
+    iframe {
+        float: right;
+        width: 480px;
+        height: 270px;
     }
     form {
         margin-top: 10px;
@@ -144,6 +147,16 @@ body {
                 display: none;
             }
         }
+    }
+}
+
+.post-extended {
+    min-height: 290px;
+    .author{
+        position: absolute;
+        margin: 10px;
+        bottom: 0;
+        left: 0;
     }
 }
 
@@ -265,6 +278,12 @@ textarea {
     color: $white;
     border: 1px solid $white;
     background-color: $background;
+}
+
+input[type=text], select {
+    color: $white;
+    background-color: $background;
+    border: 1px solid $white;
 }
 
 input[type=submit] {
