--- a/public/css/app.css
+++ b/public/css/app.css
@@ -149,6 +149,13 @@ body {
   bottom: 0;
   left: 0;
 }
+.post-extended .author a {
+  text-decoration: none;
+  color: #E5EBF1;
+}
+.post-extended .author a:hover {
+  color: #21D6CB;
+}
 
 .account {
   height: 100vh;
