--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -157,6 +157,13 @@ body {
         margin: 10px;
         bottom: 0;
         left: 0;
+        a {
+            text-decoration: none;
+            color: $white;
+            &:hover {
+                color: $cyan;
+            }
+        }
     }
 }
 
